[package]
name = "pandoc"
version = "0.1.0"
authors = ["Oliver Schneider <rust-pandoc61914191@oli-obk.de>"]
readme = "README.md"
keywords = ["latex", "markdown"]
repository = "https://github.com/oli-obk/rust-pandoc"
license-file = "LICENSE"
description = "a library API that wraps calls to the pandoc executable"

[dependencies]
itertools = "0.3"
